<resources>
    <string name="app_name">RadioButtonHW</string>
    <string name="male">男生</string>
    <string name="female">女生</string>
    <string name="regularticket">全票</string>
    <string name="childticket">兒童票</string>
    <string name="studentticket">學生票</string>
    <string name="NumberOfSheets">購買張數 :</string>
    <string name="confirn">確定</string>
    <string name="choose">選擇</string>
</resources>